kubernetes/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bludit-deployment
  labels:
    app: bludit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bludit
  template:
    metadata:
      labels:
        app: bludit
    spec:
      containers:
      - name: bludit
        image: reason997/bludit-4:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: data
          mountPath: /usr/share/nginx/html/bl-content
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: fileshare
