kubernetes/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: bludit-nodeport
spec:
  type: NodePort
  selector:
    app: bludit
  ports:
  - name: webserver
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30123
